client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunecloud-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunecloud-client
  template:
    metadata:
      labels:
        app: tunecloud-client
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: tunecloud-client
          image: ghcr.io/egorpirkov/tunecloud-client:sha-2eb9c9d
          ports:
            - containerPort: 80
