server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunecloud-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunecloud-server
  template:
    metadata:
      labels:
        app: tunecloud-server
    spec:
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: tunecloud-server
          image: ghcr.io/egorpirkov/tunecloud-server:sha-f1f4fc9
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: covers-storage
              mountPath: /app/covers
            - name: music-storage
              mountPath: /music
      volumes:
        - name: covers-storage
          persistentVolumeClaim:
            claimName: covers-pvc
        - name: music-storage
          hostPath:
            path: /home/pirkov/music
            type: Directory
