client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunecloud-client
spec:
  type: NodePort
  selector:
    app: tunecloud-client
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
