postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunecloud-db
spec:
  selector:
    app: tunecloud-db
  ports:
  - port: 5432
    targetPort: 5432
