ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tunecloud-ingress
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: tunecloud.local  
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tunecloud-server
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tunecloud-client
            port:
              number: 80
